--- a/src/index.css
+++ b/src/index.css
@@ -174,3 +174,25 @@ Quiz
   background: var(--clr-spinner);
   color: var(--clr-white);
 }
+
+.next {
+  border-radius: var(--radius);
+  border-color: transparent;
+  padding: 0.25rem 0.5rem;
+  display: block;
+  width: 15%;
+  margin-left: auto;
+  margin-top: 2rem;
+  text-transform: capitalize;
+  font-weight: 700;
+  letter-spacing: var(--spacing);
+  font-size: 1rem;
+  background: #ffb100;
+  color: var(--clr-black);
+  transition: var(--transition);
+  cursor: pointer;
+}
+.next-question:hover {
+  background: #805900;
+  color: #ffb100;
+}
