--- a/src/index.css
+++ b/src/index.css
@@ -175,7 +175,8 @@ Quiz
   color: var(--clr-white);
 }
 
-.next {
+.next,
+.close-btn {
   border-radius: var(--radius);
   border-color: transparent;
   padding: 0.25rem 0.5rem;
@@ -195,4 +196,46 @@ Quiz
 .next-question:hover {
   background: #805900;
   color: #ffb100;
+}
+
+/*
+=============== 
+Modal
+===============
+*/
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.75);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: var(--transition);
+  z-index: -1;
+}
+.isOpen {
+  opacity: 1;
+  z-index: 999;
+}
+
+.modal-content {
+  background: var(--clr-white);
+  width: 90vw;
+  max-width: var(--fixed-width);
+  padding: 3rem;
+  border-radius: var(--radius);
+  text-align: center;
+  position: relative;
+}
+.modal-content p {
+  font-size: 1.5rem;
+  text-transform: none;
+}
+.close-btn {
+  margin-right: auto;
 }
